--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -96,10 +96,12 @@
     // Sends POST to create quiz
     function createQuiz(){
         this.quizName = $('input#quizName').val();
+        $('#createQuizButton').addClass('disabled');
         $.post('/quiz/create', { quiz_name: this.quizName, user_id: window.user_id},function(data) {
          $('#quizCreateModal').foundation('reveal', 'close');
         window.list.fetch({update: true});
    
+        $('#createQuizButton').removeClass('disabled');
             });
             }
 
@@ -196,7 +198,7 @@
             <label>Quiz Name:</label>
             <input type="text" placeholder="Quiz Name" id="quizName">
         </div>
-        <a class="medium button" onClick="createQuiz()">Create Quiz</a>
+        <a class="medium button" id="createQuizButton" onClick="createQuiz()">Create Quiz</a>
         <a class="close-reveal-modal">&#215;</a>
     </div>
 
