--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -7,10 +7,12 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
 
     <title>Inquizition - Nobody expects us!</title>
-  <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/general_foundicons.css">
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="css/general_foundicons.css">
+    <link rel="stylesheet" href="css/inquizition.css">
 
     <script src="js/vendor/custom.modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
@@ -22,14 +24,30 @@
 
     <script type="text/template" id="list-template">
 
-        <h1>Click on a quiz to join:</h1>
-        <ul class="quizInfo"></ul>
-        <a href="#" onClick="generateQuiz()" class="large button expand" data-reveal-id="quizCreateModal"><i class="foundicon-plus"></i></a>
+        <div class="row together">
+            <div class="row wrap">
+                <div class="large-12 columns">
+                    <h2 class="title">Inquizition!</h2>
+                    <hr />
+                </div>
+            </div>
+            <div class="row wrap">
+                <div class="large-12 columns">
+                    <div class="quizInfo"></div>
+                    <button onClick="generateQuiz()" class="large button expand" data-reveal-id="quizCreateModal"><i class="foundicon-plus"></i></button>
+                </div>
+            </div>
+        </div>
     </script>
 
     <script type="text/template" id="results-template">
-      <h1>Results:</h1>
-      <ul class="results"></ul>
+        <div class="row wrap together" id="results">
+            <div class="large-12 columns">
+                  <h1>Results:</h1>
+                  <p>Results are continuously updated</p>
+                  <ul class="results"></ul>
+            </div>
+        </div>
     </script>
 
     <script type="text/template" id="result-template">
@@ -49,22 +67,29 @@
     </script>
 
     <script type="text/template" id="question-template">
-      <h1><%= text %></h1>
-      <% _.each(answers, function(answer){ %>
-        <button class="large button expand answer" data-id="<%= answer.id%>"><%= answer.text %></button>
-    <% }); %>
-
-    
+        <div class="large-12 columns">
+          <h1><%= text %></h1>
+          <% _.each(answers, function(answer){ %>
+            <button class="large button expand answer" data-id="<%= answer.id%>"><%= answer.text %></button>
+            <% }); %>
+          </div>
     </script>
     <script type="text/template" id="questions-template">
 
        <span class="result" ></span>
-        <div class="questions"></div>
+
+        <div class="questions" id="questions">
+
+        </div>
     </script>
 
     <script type="text/template" id="countdown-template">
-        <h1>Quiz will start in:</h1>
-        <h2><span class="countdown"></span></h2>
+        <div class="row wrap together center" id="countdown" style="display:none;">
+            <div class="large-12 columns">
+                <h1>Waiting for other players</h1>
+                <div class="progress large-6 round"><span class="meter" style="width: 0%"></span></div>
+            </div>
+        </div>
     </script>
 
 
@@ -190,6 +215,33 @@
   </head>
 
   <body>
+    <nav class="top-bar">
+        <ul class="title-area">
+        <!-- Title Area -->
+        <li class="name">
+          <h1>
+            <a href="#">
+              Inquizition
+            </a>
+          </h1>
+        </li>
+        <li class="toggle-topbar"><a href="#"></a></li>
+      </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+            <li class="has-dropdown">
+                <a href="#">User</a>
+                <ul class="dropdown">
+                  <li><label>User Actions</label></li>
+                  <li><a href="#">Results</a></li>
+                  <li><a href="#">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+        </section>
+    </nav>
 
     <div id="loginModal" class="reveal-modal xlarge">
         <div class="large-12 columns">
@@ -216,6 +268,7 @@
 
     <script>
         $(document).foundation();
+        $(document).foundation().foundation('topbar');
     </script>
  
   </body>
