--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -313,9 +313,9 @@
             <ul class="button-group">
                 <label>Starts in: (seconds)</label>
                 <br />
-                <li><button onClick="changeTime(10)" class="time large button secondary" id="10">10</button></li>
-                <li><button onClick="changeTime(30)" class="time large button" id="30">30</button></li>
-                <li><button onClick="changeTime(60)" class="time large button secondary" id="60">60</button></li>
+                <li><button onClick="changeTime(10)" class="time medium button secondary" id="10">10</button></li>
+                <li><button onClick="changeTime(30)" class="time medum button" id="30">30</button></li>
+                <li><button onClick="changeTime(60)" class="time medium button secondary" id="60">60</button></li>
             </ul>
             </div>
         </div>
