--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -311,7 +311,7 @@
         <div class="row">
             <div class="large-12 columns">
             <ul class="button-group">
-                <label>Starts in: (seconds)</label>
+                <p>Starts in: (seconds)</p>
                 <br />
                 <li><button onClick="changeTime(10)" class="time medium button secondary" id="10">10</button></li>
                 <li><button onClick="changeTime(30)" class="time medum button" id="30">30</button></li>
