Added pingdom checK

--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="css/general_foundicons.css">
     <link rel="stylesheet" href="css/inquizition.css">
     <script src="js/vendor/head.load.min.js"></script>
+    
+    <script>
+    var _prum = [['id', '520a176dabe53d404c000000'],
+                 ['mark', 'firstbyte', (new Date()).getTime()]];
+    (function() {
+        var s = document.getElementsByTagName('script')[0]
+          , p = document.createElement('script');
+        p.async = 'async';
+        p.src = '//rum-static.pingdom.net/prum.min.js';
+        s.parentNode.insertBefore(p, s);
+    })();
+    </script>
+    
    
     <script type="text/template" id="list-template">
 
