--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -306,7 +306,7 @@
         <div class="row">
         <div class="large-12 columns">
             <label>Quiz Name:</label>
-            <input type="text" placeholder="Quiz Name" id="quizName">
+            <input type="text" placeholder="Generating Quiz Name..." id="quizName">
         </div>
         </div>
         <div class="row">
