Fixed two small bugs: the points weren't showing up and the results were linking to the wrong one

--- a/inquizition/app/index.html
+++ b/inquizition/app/index.html
@@ -165,7 +165,7 @@
 
     <!-- Quiz Individual Result Template -->
     <script type="text/template" id="user-result-template">
-        <td><a href="#results?<%= id %>"><%= quizname %></a></td>
+        <td><a href="#results?<%= quiz_id %>"><%= quizname %></a></td>
         <td><%= score %></td>
         <td><%= date %></td>
     </script>
